@@ -1,3 +1,7 @@
+2007-02-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* CardGroup.m ([CardGroup -firstChildWithTag:aTag]): new method.
+
 2007-02-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* CardGroup.m ([CardGroup +cardParser]): find the correct parser
